--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -4,7 +4,16 @@
 <h2>Create an Account</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    <div class="row">
+        <div class="col-md-6">{{ form.first_name.label_tag }} {{ form.first_name }}</div>
+        <div class="col-md-4">{{ form.last_name.label_tag }} {{ form.last_name }}</div>
+        <div class="col-md-2">{{ form.age.label_tag }} {{ form.age }}</div>
+    </div>
+    <div class="mb-3">{{ form.username.label_tag }} {{ form.username }}</div>
+    <div class="mb-3">{{ form.email.label_tag }} {{ form.email }}</div>
+    <div class="mb-3">{{ form.password1.label_tag }} {{ form.password1 }}</div>
+    <div class="mb-3">{{ form.password2.label_tag }} {{ form.password2 }}</div>
+    <div class="mb-3">{{ form.allergies.label_tag }} {{ form.allergies }} <div class="form-text">Comma-separated allergies (optional)</div></div>
     <button type="submit" class="btn btn-primary">Sign Up</button>
     
 </form>
