--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,7 +13,11 @@
         {% block extra_head %}{% endblock %}
     </head>
     <body class="bg-light d-flex flex-column min-vh-100 animated-bg">
-
+        <!-- Background video -->
+        <video id="bgVideo" class="bg-video" autoplay muted loop playsinline>
+            <source src="{% static 'images/BG.mp4' %}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <nav class="navbar navbar-expand-lg navbar-dark bg-success shadow-sm">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
@@ -58,7 +62,7 @@
             </div>
         </nav>
 
-    <main class="container my-4 flex-grow-1 fade-in-up">
+    <main class=" my-4 flex-grow-1 ">
             {% if messages %}
                 <div class="mt-2">
                     {% for message in messages %}
