--- a/main_app/templates/chat_form.html
+++ b/main_app/templates/chat_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}AI Chat{% endblock %}
 {% block content %}
+<div class="container fade-in-up ">
 <div class="row">
   <div class="col-md-4">
     <div class="d-flex justify-content-between align-items-center mb-2">
@@ -40,7 +41,7 @@
     </div>
   </div>
 </div>
-
+</div>
 <script>
 const csrfToken = '{{ csrf_token }}';
 let currentChatId = null;
