--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,13 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login </h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Login</button>
-    <a href="{% url 'signup' %}" class="btn btn-secondary" style="display: inline-block;">Sign Up</a>
-    <a href="{% url 'password_reset' %}" class="btn btn-secondary" style="display: inline-block; ">this need edit dont forget Forgot Password?</a>
+<div class="login-viewport">
+    <div class="login-card fade-in-up card">
+        <div class="card-body">
+            <h2 class="mb-3 text-center">Welcome back</h2>
+            <p class="text-muted text-center small">Sign in to continue to NutriGuard</p>
+            <form method="post" class="mt-3">
+                {% csrf_token %}
+                <div class="form-row">
+                    {{ form.username.label_tag }}
+                    {{ form.username }}
+                </div>
+                <div class="form-row mt-2">
+                    {{ form.password.label_tag }}
+                    {{ form.password }}
+                </div>
 
-</form>
+                <div class="d-flex gap-2 mt-3 justify-content-center">
+                    <button type="submit" class="btn btn-success btn-lg">Sign In</button>
+                    <a href="{% url 'signup' %}" class="btn btn-outline-success btn-lg">Create Account</a>
+                </div>
+
+                <div class="text-center mt-3">
+                    <a href="{% url 'password_reset' %}" class="small text-muted">Forgot password?</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
